<resources>
    <!-- App Name -->
    <string name="app_name">Github安卓客户端</string>

    <!-- Menu -->
    <string name="menu_home">首页</string>
    <string name="menu_search">搜索</string>
    <string name="menu_me">我的</string>

    <!-- Search Language Fragment -->
    <string name="fragment_kotlin">Kotlin</string>
    <string name="fragment_Java">Java</string>
    <string name="fragment_dart">Dart</string>
    <string name="fragment_cpp">C++</string>
    <string name="fragment_javascript">JavaScript</string>

    <!-- Search Fragment -->
    <string name="search_repo">切换搜索用户</string>
    <string name="search_user">切换搜索仓库</string>

    <string name="search_hint">输入关键词搜索</string>
    <string name="search_user_hint">输入关键词搜索用户</string>
    <string name="search_repo_hint">输入关键词搜索仓库</string>

    <!-- Me Fragment -->
    <string name="my_repos">仓库</string>
    <string name="my_following">关注</string>
    <string name="my_followers">关注者</string>
    <string name="settings">设置</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="personal_access_tokens">个人访问令牌</string>
    <string name="login_tips">使用个人访问令牌登录 Github</string>
    <string name="logging_in">正在登录...</string>
    <string name="error_tips_token_empty">个人访问令牌不能为空</string>
    <string name="login_test_account">使用测试账号登录</string>
    <string name="error_tips_test_account_empty">没有配置测试账号，请把个人登录令牌配置到 local.properties 的 USER_ACCESS_TOKEN 中</string>

    <!-- Settings -->
    <string name="logout">退出登录</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_version">检查版本</string>
    <string name="already_latest_version">已是最新版</string>
    <string name="current_version">当前版本%1$s</string>
    <string name="confirm_clear_cache">确认清除缓存？</string>

    <!-- Tips -->
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="network_not_available">网络异常</string>
    <string name="reload">重新加载</string>
    <string name="load_failed">加载失败，请点击重试</string>
    <string name="load_end">加载完毕</string>
    <string name="load_complete">加载更多</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="no_data">没有相关数据</string>
    <string name="error_deny_permission">请在系统设置-权限管理中打开应用权限，否则会无法使用部分功能</string>
</resources>