<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bgColorPrimary"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginStart="4dp"
            android:background="?actionBarItemBackground"
            android:padding="12dp"
            android:src="@drawable/icon_close"
            app:tint="@color/textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/icon_github" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/login_tips"
            android:textColor="@color/textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/personal_access_tokens">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/personal_access_tokens"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>