<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_me"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bgColorPrimary"
        android:elevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/menu_me"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColorSecondary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="64dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ripple_item_select"
                android:elevation="1dp"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/login"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
                    app:layout_constraintStart_toEndOf="@+id/image_avatar"
                    app:layout_constraintTop_toTopOf="@+id/image_avatar" />

                <TextView
                    android:id="@+id/text_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/image_avatar"
                    app:layout_constraintTop_toTopOf="@+id/image_avatar"/>

                <TextView
                    android:id="@+id/text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/image_avatar"
                    app:layout_constraintStart_toEndOf="@id/image_avatar"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/bgColorPrimary"
                android:elevation="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_my_repos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_item_select"
                    android:paddingStart="16dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="14dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_repos"
                        app:tint="@color/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/my_repos"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_repos_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp"
                        app:tint="@color/textColorThird"
                        tools:text="8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_check_version"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/textColorThird" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bgColorSecondary" />

                <LinearLayout
                    android:id="@+id/layout_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_item_select"
                    android:paddingStart="16dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="14dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_my_followers"
                        app:tint="@color/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/my_followers"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_followers_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp"
                        app:tint="@color/textColorThird"
                        tools:text="8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_check_version"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/textColorThird" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bgColorSecondary" />

                <LinearLayout
                    android:id="@+id/layout_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_item_select"
                    android:paddingStart="16dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="14dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_my_following"
                        app:tint="@color/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/my_following"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp"
                        app:tint="@color/textColorThird"
                        tools:text="8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_check_version"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/textColorThird" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/bgColorPrimary"
                android:elevation="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_item_select"
                    android:paddingStart="16dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="14dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_settings"
                        app:tint="@color/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/settings"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_check_version"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/textColorThird" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>